Added InstructionParser and Readme file.